RESOLVED FIXED 113874
[CSS Regions] Hit testing is broken for absolutely positioned regions that have overflow: hidden
https://bugs.webkit.org/show_bug.cgi?id=113874
Summary [CSS Regions] Hit testing is broken for absolutely positioned regions that ha...
Mihai Balan
Reported 2013-04-03 07:00:57 PDT
Created attachment 196344 [details] Test file highlighting the problem For regions that have overflow: hidden and are absolutely positioned, hit testing is broken, as follows: - :hover rules never get applied - mouse events handlers don't fire - document.elementFromPoint() returns bogus elements. For instance, in the attached test file: - the text below the regions should read "document.elementFromPoint() - OK" - move the mouse over the orange rectangle and click EXP: orange rectangle turns black, PASS appears ACT: orange rectangle turns black, nothing appears
Attachments
Test file highlighting the problem (3.02 KB, text/html)
2013-04-03 07:00 PDT, Mihai Balan
no flags
Patch (6.93 KB, patch)
2013-04-25 08:28 PDT, Mihnea Ovidenie
no flags
Patch for landing (7.35 KB, patch)
2013-04-25 22:55 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2013-04-25 08:28:13 PDT
Dave Hyatt
Comment 2 2013-04-25 10:37:16 PDT
Comment on attachment 199663 [details] Patch r=me
Mihnea Ovidenie
Comment 3 2013-04-25 22:55:38 PDT
Created attachment 199784 [details] Patch for landing
WebKit Commit Bot
Comment 4 2013-04-25 23:22:51 PDT
Comment on attachment 199784 [details] Patch for landing Clearing flags on attachment: 199784 Committed r149168: <http://trac.webkit.org/changeset/149168>
WebKit Commit Bot
Comment 5 2013-04-25 23:22:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.